apps/nextcloud/base/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: cron
          image: nextcloud:latest
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-pvc
              subPath: 99f37b73-8f14-44b2-9211-af5de21de749/html
            - mountPath: /var/www/html/data
              name: nextcloud-data
          command: [ "/cron.sh" ]
          resources: {}
        - image: mariadb
          name: mariadb
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --skip-innodb-read-only-compressed
          resources: {}
          ports:
            - name: mariadb
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud-pvc
              subPath: 99f37b73-8f14-44b2-9211-af5de21de749/db-storage
        - image: nextcloud
          name: nextcloud
          ports:
            - name: nextcloud
              containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-pvc
              subPath: 99f37b73-8f14-44b2-9211-af5de21de749/html
            - mountPath: /var/www/html/data
              name: nextcloud-data
      restartPolicy: Always
      volumes:
        - name: nextcloud-pvc
          persistentVolumeClaim:
            claimName: nextcloud-pvc
        - name: nextcloud-data
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/service/nextcloud/data
            readOnly: false
