apps/nextcloud/base/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb
          name: mariadb
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --skip-innodb-read-only-compressed
          resources:
            limits:
              cpu: "0.3"
              memory: "1G"
          ports:
            - name: mariadb
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud-pvc
              subPath: 99f37b73-8f14-44b2-9211-af5de21de749/db-storage

      restartPolicy: Always
      volumes:
        - name: nextcloud-pvc
          persistentVolumeClaim:
            claimName: nextcloud-pvc
