apps/nextcloud/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: cron
          image: nextcloud:latest
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud
              subPath: html
          command: [ "/cron.sh" ]
          resources: {}
        - image: mariadb
          name: mariadb
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --skip-innodb-read-only-compressed
          resources:
            limits:
              cpu: "0.2"
              memory: "2Gi"
          ports:
            - name: mariadb
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud
              subPath: db-storage
        - image: redis:alpine
          name: redis
          resources:
            limits:
              cpu: "0.1"
              memory: "2Gi"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
        - image: nextcloud
          name: nextcloud
          ports:
            - name: nextcloud
              containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-data
      restartPolicy: Always
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: nextcloud-data
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/service/nextcloud/data
            readOnly: false
