apps/nextcloud/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - name: mariadb
      port: 3306
      targetPort: mariadb
  selector:
    app: mariadb
