apps/nextcloud/base/nextcloud-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  ports:
    - name: http
      port: 8500
      targetPort: http
  selector:
    app: nextcloud-app
