apps/nextcloud/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
