apps/nextcloud/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - name: http
      port: 80
      targetPort: nextcloud
  selector:
    app: nextcloud
