apps/nextcloud/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure-front
    - web-local
    - websecure-local
  routes:
  - match: Host(`newcloud.steffenillium.de`)
    kind: Rule
    services:
    - name: nextcloud
      port: 80
