apps/nextcloud/base/nextcloud-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`cloud.steffenillium.de`) || Host(`newcloud.steffenillium.de`)
    kind: Rule
    services:
    - name: nextcloud
      port: 8080
